# e-fees

./: .claudeignore  .env.dev  .env.example  .env.local.example  .env.template  .eslintignore  .gitallowed  .gitignore  .mcp-config.json  COMPREHENSIVE_TESTING_IMPLEMENTATION_SUMMARY.md  CRITICAL_DIRECTIVE_TAURI_MCP_ONLY.md  CRUD_TEST_RESULTS.md  CURRENT_DEVELOPMENT_PLAN.md  DATABASE_IMPROVEMENT_RECOMMENDATIONS.md  DATABASE_SCHEMA.md  E2E_TESTING_COMPREHENSIVE_RESULTS.md  E2E_TESTING_EXECUTIVE_SUMMARY.md  PERFORMANCE_TESTING_IMPLEMENTATION.md  PHASE_2_FINAL_RESULTS.md  PROJECT_AUTOMATION_IDEAS_2025-07-23.md  PROJECT_STATUS.md  PROJECT_STATUS_COMPREHENSIVE.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_AUTOMATION.md  RFP_IMPLEMENTATION_NOTES.md  RFP_STAGE_MIGRATION_CHECKLIST.md  RUN_TESTS.md  SECURITY_AUDIT_REPORT.md  UNIT_TESTS_IMPLEMENTATION.md  UNIT_TESTS_SUMMARY.md  capture-modals.js  claude-efees.sh  claude.md  claude_desktop_config.json  codecov.yml  codesign-dev.sh  comprehensive-test.js  comprehensive_statuschange_test.js  create_test_data.js  (+45 more)
docs/: TESTING.md  (+2 more)
src-tauri/: Cargo.toml  entitlements.plist  history.txt  tauri.conf.json
src-tauri/capabilities/: default.json  secure.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src-tauri/icons/: icon.icns
src-tauri/src/commands/: folder_management.rs  mod-backup.rs  mod.rs  refactored_examples.rs  tests.rs  utils.rs
src-tauri/src/db/: entities.rs  mod.rs  queries.md  refactored_examples.rs  sample-data.md  schema.md  secure_operations.rs  security.rs  tests.rs  utils.rs  validation.md
(+298 files in other folders)
