[package]
name = "app"
version = "0.10.1"
description = "E-Fees - Fee Proposal Management System"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", features = [ "macos-private-api", "config-toml"] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-single-instance = "2.2.2"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "2.3", features = ["kv-mem", "protocol-ws", "protocol-http", "rustls"] }
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
async-trait = "0.1"
regex = "1.10"
tauri-plugin-mcp = { path = "../tauri-plugin-mcp" }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Security-focused dependencies
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
